# Tumor-Tracer

./: .gitignore  CODE_EXPLANATION.md  README.md  TumorDetectionPipeline.ipynb  TumorDetectionPipeline.py  experiment_history.md  pyproject.toml  requirements.txt  roadmap.md
notebooks/: TumorDetectionPipeline.ipynb  main.ipynb  prueba.py  pruebaAlgoritmos.py
