[project]
name = "tumor-tracer"
version = "0.7.0"
description = "Sistema de Segmentación de Tumores Cerebrales mediante Machine Learning Clásico"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "scipy",
]
